Fixed social media icons on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -234,20 +234,20 @@ footer .contact {
 }
 
 footer .social-icons {
-  width: 12.5em;
+/*  width: 12.5em;*/
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 footer .social-icons p {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-radius: 50%;
   background-color: #527158;
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .social-icons i {
@@ -645,6 +645,11 @@ input[type=button] {
 
   footer .contact {
     margin-bottom: 0;
+  }
+
+  footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
   }
 
   footer .copyright {
